@@ -1,3 +1,8 @@
+2006-08-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/lang/management/ManagementFactory.java:
+	Updated documentation.
+	
 2006-08-20  Ito Kazumitsu  <kaz@maczuka.gcd.org>
 
 	Fixes bug #28412
